--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,43 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ng-container *ngIf="favorites$ | async as favs">
+    
+    <div *ngIf="favs.length === 0" class="empty-state">
+      <ion-icon name="heart-dislike-outline"></ion-icon>
+      <h3>Sin Aliados</h3>
+      <p>Ve a explorar y agrega a tus favoritos.</p>
+    </div>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+    <ion-list lines="none" style="background: transparent; padding: 15px;">
+      
+      <ion-item-sliding *ngFor="let char of favs; let i = index" class="fade-in-up" [style.animation-delay]="(i * 50) + 'ms'">
+        
+        <ion-item [routerLink]="['/detail', char.id]" button class="glass-card" style="margin-bottom: 12px; border-radius: 12px; --background: transparent;">
+          <ion-avatar slot="start" style="width: 55px; height: 55px; border: 2px solid var(--ion-color-secondary);">
+            <img [src]="char.image" alt="avatar" />
+          </ion-avatar>
+          
+          <ion-label>
+            <h2 style="font-weight: bold; color: #fff;">{{ char.name }}</h2>
+            <p style="color: #aaa;">{{ char.alias[0] }}</p>
+          </ion-label>
+          
+          <div slot="end" class="faction-badge" [class.demon]="char.group === 'Mandamiento'" 
+               style="font-size: 0.7rem; padding: 4px 8px; border-radius: 6px;">
+            {{ char.powerStats.total | number:'1.0-0' }}
+          </div>
+          
+          <ion-icon name="chevron-forward" slot="end" color="medium"></ion-icon>
+        </ion-item>
+
+        <ion-item-options side="end">
+          <ion-item-option color="danger" (click)="removeFav(char)">
+            <ion-icon slot="icon-only" name="trash"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+
+      </ion-item-sliding>
+
+    </ion-list>
+
+  </ng-container>
 </ion-content>
