--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,46 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <ion-title>Ajustes del Gremio</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="ion-padding content-container">
+    
+    <div class="wanted-poster">
+      <div class="poster-top">WANTED</div>
+      <div class="image-container">
+        <img src="assets/icon/elgrupito.jpg" alt="Grupo">
+      </div>
+      <div class="student-name">MOISES SERNA<br>OSWALDO MORENO<br>FABIAN MORALES</div>
+      <div class="bounty">DEAD OR ALIVE</div>
+      <p class="student-code">Código: DURA-MI VERDURA</p>
+      <p class="project-info">Proyecto Final - Ionic</p>
+    </div>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+    <h3 class="section-title">Configuración</h3>
+    
+    <ion-list lines="none">
+      
+      <ion-item>
+        <ion-icon name="moon" slot="start" color="tertiary"></ion-icon>
+        <ion-label>Noche Eterna</ion-label>
+        <ion-toggle [(ngModel)]="darkMode" (ionChange)="toggleTheme($event)"></ion-toggle>
+      </ion-item>
+      
+      <ion-item button (click)="clearFavorites()">
+        <ion-icon name="trash" slot="start" color="danger"></ion-icon>
+        <ion-label color="danger">Limpiar Datos</ion-label>
+      </ion-item>
+
+      <ion-item href="https://github.com/" target="_blank">
+        <ion-icon name="logo-github" slot="start"></ion-icon>
+        <ion-label>Ver Repositorio</ion-label>
+        <ion-icon name="open-outline" slot="end" color="medium"></ion-icon>
+      </ion-item>
+
+    </ion-list>
+    
+    <div class="version-text">v1.0.0 - Nanatsu Wiki</div>
+  </div>
 </ion-content>
