--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -33,7 +33,7 @@
         <ion-label color="danger">Limpiar Datos</ion-label>
       </ion-item>
 
-      <ion-item href="https://github.com/" target="_blank">
+      <ion-item href="https://github.com/Fergader1/PARCIAL-2-.git" target="_blank">
         <ion-icon name="logo-github" slot="start"></ion-icon>
         <ion-label>Ver Repositorio</ion-label>
         <ion-icon name="open-outline" slot="end" color="medium"></ion-icon>
